--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "sweetalert": "^2.1.2",
     "tw-elements": "^1.0.0"
   },
   "devDependencies": {
